<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brown50"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/selectedItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aldrich"
        android:text="@string/selectedItem"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintVertical_bias="0.19" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="180sp"
        android:layout_height="180sp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/imagelogo" />

    <Button
        android:id="@+id/decideButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="434dp"
        android:layout_height="49dp"
        android:layout_marginTop="1dp"
        android:background="@color/brown25"
        android:fontFamily="@font/aldrich"
        android:text="@string/decideButton"
        android:textColor="@color/brown25"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/messageView"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/addItemButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:ems="10"
        android:fontFamily="@font/aldrich"
        android:hint="@string/addItemButton"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectedItem"
        android:autofillHints="" />

    <Button
        android:id="@+id/enterItemButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/aldrich"
        android:text="@string/enterItemButton"
        android:textColor="@color/brown25"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addItemButton" />

    <TextView
        android:id="@+id/messageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="177dp"
        android:layout_marginLeft="177dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="177dp"
        android:layout_marginRight="177dp"
        android:fontFamily="@font/aldrich"
        android:text="@string/messageView"
        android:textColor="@color/brown25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterItemButton" />

    <ImageButton
        android:id="@+id/itemClear"
        style="@android:style/Widget.DeviceDefault.ImageButton"
        android:layout_width="36dp"
        android:layout_height="35dp"
        android:layout_marginStart="51dp"
        android:layout_marginLeft="51dp"
        android:background="@color/brown50"
        android:contentDescription="@string/itemClear"
        android:tint="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/addItemButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/addItemButton"
        app:layout_constraintTop_toBottomOf="@+id/addItemButton"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />
//AHGL
</androidx.constraintlayout.widget.ConstraintLayout>